<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LR电话</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search_text">轻击搜索号码</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_success">刷新成功</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="contacts_num">共<xliff:g id="num">%s</xliff:g>位联系人</string>
    <string name="text_incoming_call">来电</string>
    <string name="text_outgoing_call">去电</string>
    <string name="text_missed_call">未接</string>
    <string name="text_time_hour"><xliff:g id="h">%s</xliff:g>小时<xliff:g id="m">%s</xliff:g>分<xliff:g id="s">%s</xliff:g>秒</string>
    <string name="text_time_minute"><xliff:g id="m">%s</xliff:g>分<xliff:g id="s">%s</xliff:g>秒</string>
    <string name="text_time_second"><xliff:g id="s">%s</xliff:g>秒</string>
    <string name="text_time_no_second">已拨</string>
    <string name="activity_title_contact_detail">联系人详情</string>
    <string name="activity_title_contact_edit">编辑联系人</string>
    <string name="activity_title_search">搜索</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="title_warning">提示</string>
    <string name="title_activity_web_view">浏览器</string>
    <string name="action_refresh">刷新</string>
    <string name="action_back">后退</string>
    <string name="action_close">关闭</string>
    <string name="action_forward">前进</string>
    <string name="action_home">首页</string>
    <string name="action_open_in_browser">用浏览器打开</string>
    <string name="title_activity_login">用户登录</string>
    <string name="title_activity_change_pwd">修改密码</string>
</resources>
