<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2015.
  -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lrcall.ui.ActivityWebView">
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/web_back"
        android:orderInCategory="100"
        android:title="@string/action_back"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/web_refresh"
        android:orderInCategory="101"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/web_forward"
        android:orderInCategory="102"
        android:title="@string/action_forward"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/web_home"
        android:orderInCategory="103"
        android:title="@string/action_home"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/web_stop"
        android:orderInCategory="104"
        android:title="@string/action_close"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_open_in_browser"
        android:icon="@drawable/more"
        android:orderInCategory="105"
        android:title="@string/action_open_in_browser"
        app:showAsAction="never"/>
</menu>
