<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Libit保留所有版权，如有疑问联系QQ：308062035
  ~ Copyright (c) 2016.
  -->

<LinearLayout
    android:id="@+id/dialog_root_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="40dip"
    android:layout_marginRight="40dip"
    android:background="@drawable/body_cont"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:gravity="center"
        android:text="@string/title_warning"
        android:textColor="@color/black"
        android:textSize="18sp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:scaleType="fitXY"
        android:src="@drawable/line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dip"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="12dip"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="60dip"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/dialog_progressbar"
                android:layout_width="48dip"
                android:layout_height="48dip"
                android:indeterminateDrawable="@drawable/image_progress"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8.0dip"
                android:layout_marginRight="5.0dip"
                android:gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/dialog_tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog_layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:scaleType="fitXY"
                android:src="@drawable/line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dip">
                <Button
                    android:id="@+id/dialog_btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/ok"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="1dip"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dip"
                    android:background="@color/line_height"/>
                <Button
                    android:id="@+id/dialog_btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>